我的个人网站

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 		</div>
 		<div class="contact-grids">
 			<div class="col-md-5 contact-left">
-				<h3>打招呼</h3>
+				<h3>联系我</h3>
 				<div class="stripb"></div>
 				<ul>
 					<li>手机：155******** </li>
